projects/web-mev/src/app/features/contact-dialog/contact.component.css
.headerSpan {
    display: flex;
    background-color: #1DA1F2;
    margin: -35px -30px 0 -30px;
}

.dialogTitle {
    justify-content: flex-start;
    width: 85%;
    padding-top: 5px;
    padding-bottom: 5px;
    margin: 20px 0 10px 30px;
    color: white;
    font-weight: bold;
    font-size: 24px;
}
.dialogContent{
    font-size: 14px;
    font-weight: 400;
    color: rgba(0,0,0,.6);
    margin-top: 1em;
}

.closeDialogButton {
    display: flex;
    justify-content: flex-end;
    width: 15%;
    margin: 10px 10px 0 0;
    color: white;
}
.closeDialogButton:hover{
    opacity: .75;
}

.inputField {
    width: 100%;
    margin-top: 20px;
}

.submitBtnContainer {
    display: flex;
    justify-content: flex-end;
}

